force-app/main/default/objects/ConsentTemplate__c/ConsentTemplate__c.object-meta.xml
<CustomObject>
    <description>Object to store all consent templates</description>
    <label>Consent Template</label>
    <nameField>
        <label>Consent Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>