force-app/main/default/objects/ConsentTemplate__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Template code</description>
    <label>Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>