force-app/main/default/objects/ConsentTemplate__c/fields/ConsentType__c.field-meta.xml
<CustomField>
    <fullName>ConsentType__c</fullName>
    <description>Consent Type</description>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disclosure</fullName>
                <default>true</default>
                <label>Disclosure</label>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>