force-app/main/default/objects/ConsentTemplate__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Type of document</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>