force-app/main/default/objects/ConsentTemplate__c/fields/HtmlContent__c.field-meta.xml
<CustomField>
    <fullName>HtmlContent__c</fullName>
    <description>When document type is html, this value is rendered in the UI</description>
    <inlineHelpText>When document type is html, this value is rendered in the UI</inlineHelpText>
    <label>Html Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>