force-app/main/default/objects/ConsentTemplate__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Template label for UI</description>
    <label>Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>