force-app/main/default/objects/ConsentTemplate__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <description>Short Description about the template</description>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>