force-app/main/default/objects/ConsentTemplate__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <description>Version nuber for consent</description>
    <label>Version Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>