force-app/main/default/objects/ConsentTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Label__c</columns>
    <columns>DocumentType__c</columns>
    <columns>VersionNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>